<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/LinearLayout1"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
    android:background="#052439"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".AboutActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/NAME_THEME"
            android:id="@+id/TEXT_DEVELOPED"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DEV_DEVELOPED_TXT"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            style="@style/LABEL_THEME"
            android:id="@+id/TEXT_DEVELOPED_BY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DEV_DEVELOPED_BY"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            style="@style/MAIL_THEME"
            android:id="@+id/TEXT_DEVELOPED_MAIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DEV_DEVELOPED_MAIL"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/NAME_THEME"
            android:id="@+id/TEXT_LAYOUT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DEV_LAYOUT_TXT"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            style="@style/LABEL_THEME"
            android:id="@+id/TEXT_LAYOUT_BY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DEV_LAYOUT_BY"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            style="@style/MAIL_THEME"
            android:id="@+id/TEXT_LAYOUT_MAIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DEV_LAYOUT_MAIL"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
</LinearLayout>